--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,33 @@ body{
 .ql-editor{
     font-size: 1.25rem;
 }
+
+.post-content p{
+    margin-bottom:0.5rem;
+
+}
+
+.post-content h1{
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 1.5rem 0;
+
+}
+
+.post-content h2{
+    font-size: 1.4rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.post-content a{
+    color: dodgerblue;
+}
+
+.post-content a:hover{
+    text-decoration: underline;
+}
+
+ .dark .post-content a{
+    color: rgb(223, 92, 223);
+}
